--- a/front-end/plantilla CRUD/crudPaciente.html
+++ b/front-end/plantilla CRUD/crudPaciente.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CRUD</title>
+    <title>CRUD PACIENTE</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/estilos.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -17,11 +17,21 @@
                 <div class="table tittle">
                     <div class="row">
                         <div class="col-sm-6">
-                            <h1 style="padding-right: 50%;"><b>Pacientes Registrados</b></h1>
+                            <h1 style="padding-right: 45%;"><b>Pacientes Registrados</b></h1>
                         </div>
-                        <div class="col-sm-6" style="padding-left:40%;">
-                            <a href="../plantilla CRUD/registrarPaciente.html" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i><h6>Registrar Medico</h6></a>
+                        <div class="col-sm-6" style="padding-left:39%;">
+                            <a href="../plantilla CRUD/registrarPaciente.html" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i><h6>Registrar Paciente</h6></a>
                         </div>
+                    </div>
+                </div>
+                <div class="input-group mb-3">
+                    <input type="text" id="texto" class="form-control" placeholder="Buscar..."
+                        aria-label="Buscar" aria-describedby="button-addon2">
+                    <div class="input-group-append">
+                        <button class="btn btn-outline-secondary" type="submit" id="button-addon2"
+                            onclick="listarPaciente();">
+                            <i class="fas fa-search"></i>
+                        </button>
                     </div>
                 </div>
                 <table id="table table-striped table-hover" class="table" style="background-color: rgba(68, 68, 68, 0.515); border: rgb(161, 161, 161) 2px solid;">
